--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-big-calendar": "^1.19.4",
     "react-circular-progressbar": "^2.2.0",
